discount added in receipt

--- a/src/app/modules/Accounting/JournalEntry/JournalEntry.component.html
+++ b/src/app/modules/Accounting/JournalEntry/JournalEntry.component.html
@@ -28,7 +28,7 @@
             </mat-option>
         </mat-autocomplete>
     </mat-form-field>
-    <button [disabled]="loading" class="mat-raised-button" (click)="GetAccountingVoucher()">
+    <button [disabled]="loading" mat-raised-button color="accent" (click)="GetAccountingVoucher()">
         <mat-icon>search</mat-icon>
         <mat-icon *ngIf="loading">
             <mat-spinner diameter="20" color="Blue"></mat-spinner>
