--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <mat-toolbar-row class="width100" fxLayout="row" fxLayoutAlign="space-between center">
+    <mat-toolbar-row class="width100 mat-elevation-z4" fxLayout="row" fxLayoutAlign="space-between center">
         <div style="margin:10px 10px 10px 15px;" fxLayout="row" fxLayoutAlign="start center">
             <a [routerLink]="['/']"><img style="border-radius: 20px;" src="{{logoPath}}" alt="{{OrganizationName}}"
                     width="60px" /></a>
