--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -41,7 +41,9 @@ button{
 //     }
 
 //   }
-
+.mat-toolbar {
+    position: relative;
+  }
 .transparent {
     color                    : transparent;
     -webkit-text-stroke-width: 1px;
